--- a/uniEvents-main/project/package.json
+++ b/uniEvents-main/project/package.json
@@ -60,6 +60,7 @@
     "mongo-express": "^1.1.0-rc-3",
     "mongoose": "^8.10.0",
     "next": "13.5.1",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
@@ -80,6 +81,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
-    "@types/jsonwebtoken": "^9.0.8"
+    "@types/jsonwebtoken": "^9.0.8",
+    "@types/next-auth": "^3.15.0"
   }
 }
