--- a/uniEvents-main/project/package.json
+++ b/uniEvents-main/project/package.json
@@ -63,6 +63,7 @@
     "next": "13.5.1",
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.10.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
