--- a/uniEvents-main/project/package.json
+++ b/uniEvents-main/project/package.json
@@ -87,6 +87,7 @@
     "@types/cors": "^2.8.17",
     "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.8",
-    "@types/next-auth": "^3.15.0"
+    "@types/next-auth": "^3.15.0",
+    "@types/nodemailer": "^6.4.17"
   }
 }
