--- a/uniEvents-main/project/package.json
+++ b/uniEvents-main/project/package.json
@@ -66,11 +66,13 @@
     "nodemailer": "^6.10.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-clock": "^5.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.3",
+    "react-time-picker": "^7.0.0",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
